--- a/x11/wxGTK/Makefile.common
+++ b/x11/wxGTK/Makefile.common
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile.common,v 1.3 2005/08/10 20:56:30 jlam Exp $
+# $NetBSD: Makefile.common,v 1.4 2005/08/11 00:47:23 dmcmahill Exp $
 #
 
-DISTNAME=		wxGTK-2.6.1
+DISTNAME=		wxGTK-2.6.2
 CATEGORIES=		x11
 MASTER_SITES=		${MASTER_SITE_SOURCEFORGE:=wxwindows/}
 EXTRACT_SUFX=		.tar.bz2
