--- a/print/php-pdflib/Makefile
+++ b/print/php-pdflib/Makefile
@@ -1,8 +1,9 @@
-# $NetBSD: Makefile,v 1.2 2004/11/25 20:23:40 jdolecek Exp $
+# $NetBSD: Makefile,v 1.3 2005/04/11 21:47:08 tv Exp $
 
 MODNAME=		pdflib
 PKGMODNAME=		pdf
 PECL_VERSION=		2.0.3
+PKGREVISION=		1
 CATEGORIES+=		print
 PKGREVISION=		# empty
 COMMENT=		PHP extension for PDFlib on-the-fly PDF generation
