--- a/www/php-eaccelerator/Makefile
+++ b/www/php-eaccelerator/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.18 2004/12/18 15:53:29 jdolecek Exp $
+# $NetBSD: Makefile,v 1.1.1.1 2005/05/07 18:53:33 jdolecek Exp $
 
 MODNAME=	eaccelerator
 PECL_VERSION=	0.9.2a
+PKGREVISION=	1
 CATEGORIES+=	sysutils
 COMMENT=	PHP accelerator, optimizer, encoder and dynamic content cache
 
