--- a/www/php4-apc/Makefile
+++ b/www/php4-apc/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.18 2004/12/18 15:53:29 jdolecek Exp $
+# $NetBSD: Makefile,v 1.19 2005/04/11 21:48:01 tv Exp $
 
 MODNAME=	apc
 PECL_VERSION=	2.0.4
+PKGREVISION=	1
 CATEGORIES+=	sysutils
 COMMENT=	Alternative PHP Cache for PHP4
 
