--- a/databases/Makefile
+++ b/databases/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.181 2005/08/24 11:00:13 salo Exp $
+# $NetBSD: Makefile,v 1.182 2005/09/06 19:12:08 tv Exp $
 #
 
 COMMENT=	Databases
@@ -100,7 +100,6 @@ SUBDIR+=	php-odbc
 SUBDIR+=	php-pgsql
 SUBDIR+=	php-sqlite
 SUBDIR+=	php5-mysqli
-SUBDIR+=	php5-sqlite
 SUBDIR+=	phpldapadmin
 SUBDIR+=	phpmyadmin
 SUBDIR+=	phppgadmin
