--- a/graphics/qvplay/Makefile
+++ b/graphics/qvplay/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.6 2003/07/21 16:51:50 martti Exp $
+# $NetBSD: Makefile,v 1.7 2004/01/20 12:18:17 agc Exp $
 #
 
 DISTNAME=	qvplay-0.94
@@ -15,5 +15,6 @@ NO_SRC_ON_CDROM=	${RESTRICTED}
 
 WRKSRC=		${WRKDIR}/QVplay094/src
 GNU_CONFIGURE=	yes
+CONFIGURE_HAS_MANDIR=	NO
 
 .include "../../mk/bsd.pkg.mk"
