--- a/emulators/Makefile
+++ b/emulators/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.136 2005/08/30 11:08:18 xtraeme Exp $
+# $NetBSD: Makefile,v 1.137 2005/09/22 15:02:56 wiz Exp $
 #
 
 COMMENT=	Emulators for other operating systems
@@ -73,6 +73,7 @@ SUBDIR+=	qemu
 SUBDIR+=	raine
 SUBDIR+=	simh
 SUBDIR+=	simulavr
+SUBDIR+=	ski
 SUBDIR+=	sms_sdl
 SUBDIR+=	snes9x
 SUBDIR+=	spim
