--- a/www/jakarta-servletapi/Makefile
+++ b/www/jakarta-servletapi/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.18 2004/07/02 22:06:19 wiz Exp $
+# $NetBSD: Makefile,v 1.19 2005/04/11 21:47:54 tv Exp $
 
 DISTNAME=	jakarta-servletapi-${TOMCAT_VERSION}-src
 PKGNAME=	${DISTNAME:S/-src$//}
@@ -38,6 +38,7 @@ do-install:
 	cd ${WRKDIR}/dist/servletapi/docs && ${PAX} -rw -pp . ${PREFIX}/${DOCDIR}
 
 .include "../../mk/java-vm.mk"
+.include "../../mk/java-env.mk"
 .include "../../mk/bsd.pkg.mk"
 
 MAKE_PROGRAM=	${LOCALBASE}/bin/ant
