--- a/www/apachetop/Makefile
+++ b/www/apachetop/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.4 2004/11/27 00:25:03 sketch Exp $
+# $NetBSD: Makefile,v 1.5 2005/04/11 21:47:51 tv Exp $
 #
 
 DISTNAME=	apachetop-0.12.5
+PKGREVISION=	1
 CATEGORIES=	sysutils www
 MASTER_SITES=	http://clueful.shagged.org/apachetop/files/
 
