--- a/net/mldonkey/Makefile
+++ b/net/mldonkey/Makefile
@@ -1,11 +1,9 @@
-# $NetBSD: Makefile,v 1.28 2005/07/25 01:39:10 kristerw Exp $
+# $NetBSD: Makefile,v 1.29 2005/08/23 11:48:50 rillig Exp $
 #
 
 .include "Makefile.common"
 
 USE_PKGINSTALL=		YES
-
-CONFIGURE_ARGS+=	--disable-gui
 
 RCD_SCRIPTS=		mldonkey
 
