--- a/x11/py-qt3-base/Makefile.common
+++ b/x11/py-qt3-base/Makefile.common
@@ -1,11 +1,11 @@
-# $NetBSD: Makefile,v 1.16 2005/06/01 18:03:30 jlam Exp $
+# $NetBSD: Makefile.common,v 1.1 2005/07/01 01:20:28 reed Exp $
 #
 
 # XXX: when updating version, be sure to update distinfo for both
 # XXX: PyQt-mac-gpl and PyQt-x11-gpl in py-qt3-qscintilla,
 # XXX: py-qt3-base, and py-qt3-modules.
 
-PYQT_VERSION=		3.14.1
+PYQT_VERSION=		3.15
 CATEGORIES=		x11 python
 MASTER_SITES=		http://www.river-bank.demon.co.uk/download/PyQt/
 
