--- a/graphics/mayavi/Makefile
+++ b/graphics/mayavi/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.4 2005/04/11 21:46:06 tv Exp $
+# $NetBSD: Makefile,v 1.5 2005/07/27 16:21:17 wiz Exp $
 #
 
-DISTNAME=		MayaVi-1.3
-PKGREVISION=	1
+DISTNAME=		MayaVi-1.5
 CATEGORIES=		graphics
 MASTER_SITES=		${MASTER_SITE_SOURCEFORGE:=mayavi/}
 
