--- a/math/meschach/Makefile
+++ b/math/meschach/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.10 2003/07/17 21:47:46 grant Exp $
+# $NetBSD: Makefile,v 1.11 2004/01/20 12:20:05 agc Exp $
 
 DISTNAME=		mesch12b
 PKGNAME=		meschach-1.2b
@@ -10,7 +10,7 @@ HOMEPAGE=		http://www.math.uiowa.edu/~dstewart/meschach/
 COMMENT=		Library of C Routines for Matrix Computations
 
 WRKSRC=			${WRKDIR}
-GNU_CONFIGURE=		#defined
+GNU_CONFIGURE=		yes
 CONFIGURE_ARGS+=	--with-all
 MAKEFILE=		makefile
 
