--- a/textproc/gnome-doc-utils/Makefile
+++ b/textproc/gnome-doc-utils/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.5 2005/08/10 20:56:24 jlam Exp $
+# $NetBSD: Makefile,v 1.6 2005/08/26 16:30:51 drochner Exp $
 #
 
-DISTNAME=	gnome-doc-utils-0.3.2
+DISTNAME=	gnome-doc-utils-0.4.2
 CATEGORIES=	textproc gnome
-MASTER_SITES=	${MASTER_SITE_GNOME:=sources/gnome-doc-utils/0.3/}
+MASTER_SITES=	${MASTER_SITE_GNOME:=sources/gnome-doc-utils/0.4/}
 EXTRACT_SUFX=	.tar.bz2
 
 MAINTAINER=	jmmv@NetBSD.org
