--- a/sysutils/gnome-vfs2/Makefile
+++ b/sysutils/gnome-vfs2/Makefile
@@ -1,6 +1,4 @@
-# $NetBSD: Makefile,v 1.49 2005/08/10 21:11:39 jlam Exp $
-
-PKGREVISION=		1
+# $NetBSD: Makefile,v 1.50 2005/09/05 14:15:32 adam Exp $
 
 PKGCONFIG_OVERRIDE=	gnome-vfs-2.0.pc.in
 PKGCONFIG_OVERRIDE+=	gnome-vfs-module-2.0.pc.in
