--- a/net/gnome-vfs2-smb/Makefile
+++ b/net/gnome-vfs2-smb/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1.1.1 2004/04/15 16:41:02 jmmv Exp $
+# $NetBSD: Makefile,v 1.2 2004/04/15 20:10:43 jmmv Exp $
 #
 
 GNOME_VFS2_NAME=	smb
@@ -6,6 +6,8 @@ GNOME_VFS2_FLAG=	samba
 CATEGORIES=		net
 
 EGFILES+=		modules/smb-module.conf
+
+CONFIGURE_ARGS+=	--with-samba-libs=${BUILDLINK_PREFIX.samba}/lib/samba
 
 post-install:
 	${INSTALL_DATA} ${WRKSRC}/modules/smb-module.conf ${EGDIR}/modules
