--- a/archivers/dact/Makefile
+++ b/archivers/dact/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.12 2005/04/11 21:44:48 tv Exp $
+# $NetBSD: Makefile,v 1.13 2005/05/22 20:07:36 jlam Exp $
 #
 
 DISTNAME=	dact-0.8.3
-PKGREVISION=	2
+PKGREVISION=	3
 CATEGORIES=	archivers
 MASTER_SITES=	http://www.rkeene.org/devel/
 
