--- a/lang/tcl/Makefile
+++ b/lang/tcl/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.52 2005/08/02 22:37:18 seb Exp $
+# $NetBSD: Makefile,v 1.53 2005/08/31 09:40:15 seb Exp $
 
 DISTNAME=	tcl${TCL_VERSION}-src
 PKGNAME=	tcl-${TCL_VERSION}
@@ -31,6 +31,8 @@ TEST_ENV+=		TZ=+0
 # Initially install the man pages into ${WRKDIR}/man, as we need a staged
 # install to avoid overwriting existing manpages in ${PREFIX}/man.
 CONFIGURE_ARGS+=	--mandir=${WRKDIR}/man
+# need to avoid automatic --mandir
+CONFIGURE_HAS_MANDIR=	no
 
 .include "../../mk/bsd.prefs.mk"
 
