--- a/net/iperf/Makefile
+++ b/net/iperf/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.10 2004/12/03 13:30:20 adam Exp $
+# $NetBSD: Makefile,v 1.11 2005/04/11 21:46:48 tv Exp $
 
-DISTNAME=	iperf-2.0.1
+DISTNAME=	iperf-2.0.2
 CATEGORIES=	net
 MASTER_SITES=	http://dast.nlanr.net/Projects/Iperf2.0/
 
