--- a/databases/php-ldap/Makefile
+++ b/databases/php-ldap/Makefile
@@ -1,10 +1,11 @@
-# $NetBSD: Makefile,v 1.3 2004/11/05 17:11:39 jdolecek Exp $
+# $NetBSD: Makefile,v 1.4 2005/04/11 21:45:14 tv Exp $
 
 MODNAME=		ldap
-PKGREVISION=		# empty
+PKGREVISION=		1
 CATEGORIES+=		databases
 COMMENT=		PHP extension for LDAP database access
 
+USE_PHP_EXT_PATCHES=	yes
 
 CONFIGURE_ARGS+=	--with-${MODNAME}=shared,${BUILDLINK_PREFIX.openldap}
 
