--- a/audio/liteamp/Makefile
+++ b/audio/liteamp/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.13 2005/07/21 16:29:44 wiz Exp $
+# $NetBSD: Makefile,v 1.14 2005/08/10 20:56:12 jlam Exp $
 
 DISTNAME=	liteamp-0.2.4.2
-PKGREVISION=	1
+PKGREVISION=	2
 CATEGORIES=	audio
 MASTER_SITES=	http://download.kldp.net/liteamp/
 
