--- a/audio/py-ao/Makefile
+++ b/audio/py-ao/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.4 2005/04/11 21:44:56 tv Exp $
+# $NetBSD: Makefile,v 1.5 2005/07/27 16:21:16 wiz Exp $
 #
 
 DISTNAME=		pyao-0.81
 PKGNAME=		${PYPKGPREFIX}-${DISTNAME}
-PKGREVISION=	1
+PKGREVISION=		2
 CATEGORIES=		audio python
 MASTER_SITES=		http://vorbis.com/files/1.0.1/unix/py/
 
