--- a/devel/gnome-common/Makefile
+++ b/devel/gnome-common/Makefile
@@ -1,9 +1,10 @@
-# $NetBSD: Makefile,v 1.5 2004/12/28 22:23:27 jmmv Exp $
+# $NetBSD: Makefile,v 1.6 2005/04/11 21:45:24 tv Exp $
 #
 
-DISTNAME=	gnome-common-2.8.0
+DISTNAME=	gnome-common-2.12.0
 CATEGORIES=	devel gnome
-MASTER_SITES=	${MASTER_SITE_GNOME:=sources/gnome-common/2.8/}
+MASTER_SITES=	${MASTER_SITE_GNOME:=sources/gnome-common/2.12/}
+EXTRACT_SUFX=	.tar.bz2
 
 MAINTAINER=	tech-pkg@NetBSD.org
 HOMEPAGE=	http://www.gnome.org/
