--- a/graphics/jasper/Makefile
+++ b/graphics/jasper/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.17 2004/10/03 00:14:53 tv Exp $
+# $NetBSD: Makefile,v 1.18 2005/04/11 21:46:04 tv Exp $
 #
 
 DISTNAME=	jasper-1.701.0
@@ -16,6 +16,12 @@ PKG_INSTALLATION_TYPES=	overwrite pkgviews
 GNU_CONFIGURE=		YES
 USE_LIBTOOL=		YES
 CONFIGURE_ARGS+=	--enable-shared --without-x --disable-opengl
+
+.include "../../mk/compiler.mk"
+
+.if !empty(PKGSRC_COMPILER:Mmipspro*)
+CFLAGS+=		-c99
+.endif
 
 post-install:
 	${INSTALL_DATA_DIR} ${PREFIX}/share/doc/jasper
