--- a/databases/php-dbx/Makefile
+++ b/databases/php-dbx/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.1.1.1 2004/11/05 21:01:46 jdolecek Exp $
+# $NetBSD: Makefile,v 1.2 2005/04/11 21:45:14 tv Exp $
 
 MODNAME=		dbx
+PECL_VERSION=		1.1.0
 CATEGORIES+=		databases
 PKGREVISION=		# empty
 COMMENT=		PHP database abstraction layer extension
