--- a/print/libgnomeprint/Makefile
+++ b/print/libgnomeprint/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.43 2005/07/21 16:29:56 wiz Exp $
+# $NetBSD: Makefile,v 1.44 2005/08/10 20:56:23 jlam Exp $
 #
 
-DISTNAME=	libgnomeprint-2.10.3
+DISTNAME=	libgnomeprint-2.12.1
 CATEGORIES=	print gnome
-MASTER_SITES=	${MASTER_SITE_GNOME:=sources/libgnomeprint/2.10/}
+MASTER_SITES=	${MASTER_SITE_GNOME:=sources/libgnomeprint/2.12/}
 EXTRACT_SUFX=	.tar.bz2
 
 MAINTAINER=	jmmv@NetBSD.org
