--- a/print/libgnomeprintui/Makefile
+++ b/print/libgnomeprintui/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.37 2005/07/21 16:29:56 wiz Exp $
+# $NetBSD: Makefile,v 1.38 2005/08/10 20:56:23 jlam Exp $
 #
 
-DISTNAME=	libgnomeprintui-2.10.2
+DISTNAME=	libgnomeprintui-2.12.1
 CATEGORIES=	print gnome
-MASTER_SITES=	${MASTER_SITE_GNOME:=sources/libgnomeprintui/2.10/}
+MASTER_SITES=	${MASTER_SITE_GNOME:=sources/libgnomeprintui/2.12/}
 EXTRACT_SUFX=	.tar.bz2
 
 MAINTAINER=	jmmv@NetBSD.org
@@ -22,7 +22,7 @@ PKGCONFIG_OVERRIDE=	libgnomeprintui/libgnomeprintui-2.2.pc.in
 CONFIGURE_ARGS=		--enable-gtk-doc=no
 CONFIGURE_ARGS+=	--with-html-dir=${PREFIX}/share/doc
 
-BUILDLINK_DEPENDS.libgnomeprint+=	libgnomeprint>=2.10.2
+BUILDLINK_DEPENDS.libgnomeprint+=	libgnomeprint>=2.12.1
 
 .include "../../devel/gettext-lib/buildlink3.mk"
 .include "../../devel/GConf2/buildlink3.mk"
