--- a/graphics/Makefile
+++ b/graphics/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.388 2005/07/23 21:34:55 wiz Exp $
+# $NetBSD: Makefile,v 1.389 2005/08/21 11:26:47 jmmv Exp $
 #
 
 COMMENT=	Graphics tools and libraries
@@ -170,7 +170,6 @@ SUBDIR+=	libkipi
 SUBDIR+=	libpixman
 SUBDIR+=	librsvg
 SUBDIR+=	librsvg2
-SUBDIR+=	librsvg2-gtk2
 SUBDIR+=	libungif
 SUBDIR+=	libvideogfx
 SUBDIR+=	libwmf
